After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 613421 - Text always stays as "Start recording"
Text always stays as "Start recording"
Status: RESOLVED FIXED
Product: cheese
Classification: Applications
Component: general
2.29.x
Other Linux
: Normal normal
: 2.28
Assigned To: Cheese Maintainer(s)
Cheese Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2010-03-20 17:31 UTC by Vish
Modified: 2010-03-24 15:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
words stuck as "Start Recording" (10.91 KB, image/png)
2010-03-20 17:31 UTC, Vish
  Details
window: set correct label when recording (1.48 KB, patch)
2010-03-21 09:25 UTC, Filippo Argiolas
committed Details | Review
window: set correct label when recording (1.48 KB, patch)
2010-03-24 15:46 UTC, Filippo Argiolas
committed Details | Review

Description Vish 2010-03-20 17:31:50 UTC
Created attachment 156629 [details]
words stuck as "Start Recording"

Steps to reproduce:

1: Switch to video mode. 
2: When not recording ,notice that the icon is a "Record" icon and words on the record button are "Start Recording"
3: Now start recording, notice the icon changes to "Stop" *but* the words on the button are still "Start Recording"

Ideally the words need to change to "Stop recording"

Attaching a screenshot of the bug in action
Comment 1 Filippo Argiolas 2010-03-21 09:25:12 UTC
Created attachment 156664 [details] [review]
window: set correct label when recording

Set the main button label to "Stop recording" while recording.
Comment 2 Filippo Argiolas 2010-03-24 15:46:37 UTC
The following fix has been pushed:
3d2d83b window: set correct label when recording
Comment 3 Filippo Argiolas 2010-03-24 15:46:43 UTC
Created attachment 156993 [details] [review]
window: set correct label when recording

Set the main button label to "Stop recording" while recording.