window: set correct label when recording

Set the main button label to "Stop recording" while recording.

https://bugzilla.gnome.org/show_bug.cgi?id=613421